src/test/ui/feature-gate-nll.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/feature-gate-nll.rs:17:5
   |
LL |     let p = &x;
   |              - borrow of `x` occurs here
LL |     x = 22; //~ ERROR cannot assign to `x` because it is borrowed [E0506]
   |     ^^^^^^ assignment to borrowed `x` occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
